--- a/serverless.yml
+++ b/serverless.yml
@@ -44,3 +44,10 @@ functions:
       - http:
           path: notes/{id}
           method: get
+
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
