--- a/serverless.yml
+++ b/serverless.yml
@@ -51,3 +51,9 @@ functions:
       - http:
           path: notes
           method: get
+  update:
+    handler: update.main
+    events:
+      - http:
+          path: notes/{id}
+          method: put
