--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,8 @@ provider:
   runtime: nodejs12.x
   stage: prod
   region: us-east-1
+  memorySize: 128
+  timeout: 5
 
   # environment variables made available to our functions
   environment:
@@ -51,9 +53,17 @@ functions:
       - http:
           path: notes
           method: get
+
   update:
     handler: update.main
     events:
       - http:
           path: notes/{id}
           method: put
+
+  delete:
+    handler: delete.main
+    events:
+      - http:
+          path: notes/{id}
+          method: delete
