--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "aws-sdk": "^2.827.0",
     "serverless-bundle": "^4.2.0",
     "serverless-offline": "^6.8.0"
+  },
+  "dependencies": {
+    "stripe": "^8.131.1"
   }
 }
