--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.827.0",
+    "jest": "^26.6.3",
     "serverless-bundle": "^4.2.0",
     "serverless-offline": "^6.8.0"
   },
